# caliptra-mcu-sw

./: .gitignore  COLDBOOT_SEQUENCE_DIAGRAM.md  Cargo.toml  HMAC_TO_ASYM_CUTOVER_PLAN.md  MCU_MBOX_OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  RECOVERY_SEQUENCE_DIAGRAM.md  ROM_SIZE_OPTIMIZATION_SUMMARY.md  SPDM_FEATURE_GUIDE.md  VENDOR_AUTH_E2E_TESTING.md  VENDOR_AUTH_FORK_PIN_REVERT.md  build_fpga_artifacts.sh  caliptra-sw  disassembly  issue689.txt  primary_flash  run_attestation_e2e.sh
builder/: Cargo.toml  no_meta_rustc_wrapper.sh
builder/src/: all.rs  apps.rs  caliptra.rs  features.rs  firmware.rs  flash_image.rs  flash_layout_config.rs  lib.rs  network_rom.rs  offline_signing.rs  platform.rs  rom.rs  runtime.rs  utils.rs
builder/src/all/: artifacts.rs  binaries.rs  bundle.rs  context.rs  emulator.rs  feature_resources.rs  flash.rs  mod.rs  pldm.rs  soc_images.rs  test_roms.rs
caliptra-util-host/: Cargo.toml  README.md  build.sh
caliptra-util-host/apps/mailbox/: README.md
caliptra-util-host/apps/spdm/: test-config.toml
caliptra-util-host/caliptra-command-types/: Cargo.toml
caliptra-util-host/caliptra-command-types/src/: certificate.rs  crypto_aes.rs  crypto_asymmetric.rs  crypto_hash.rs  debug.rs  device_info.rs  error.rs  fuse.rs  lib.rs
caliptra-util-host/caliptra-commands/: Cargo.toml
caliptra-util-host/caliptra-commands/src/: lib.rs  packing.rs
caliptra-util-host/caliptra-core/: Cargo.toml
caliptra-util-host/caliptra-core/src/: executor.rs  lib.rs
caliptra-util-host/caliptra-osal/: Cargo.toml
caliptra-util-host/caliptra-osal/src/: error.rs  io.rs  lib.rs  memory.rs  sync.rs  thread.rs  time.rs
caliptra-util-host/caliptra-session/: Cargo.toml
caliptra-util-host/caliptra-session/src/: lib.rs
caliptra-util-host/caliptra-transport/: Cargo.toml
caliptra-util-host/caliptra-transport/src/: error.rs  lib.rs  registry.rs
caliptra-util-host/caliptra-util-host-cbinding/: Cargo.toml  build.rs  caliptra_util_host.h
caliptra-util-host/caliptra-util-host-cbinding/src/: lib.rs
caliptra-util-host/caliptra-util-host-core/: Cargo.toml
caliptra-util-host/caliptra-util-host-core/src/: command.rs  context.rs  error.rs  lib.rs  plugin.rs  transport.rs
caliptra-util-host/caliptra-util-host-plugins/: Cargo.toml
caliptra-util-host/caliptra-util-host-plugins/src/: c_plugin_interface.rs  discovery.rs  dynamic_loader.rs  lib.rs
caliptra-util-host/caliptra-util-host-transports/: Cargo.toml
caliptra-util-host/caliptra-util-host-transports/src/: lib.rs  mock_transport.rs  tcp_transport.rs
caliptra-util-host/caliptra-vdm-transport/: Cargo.toml
caliptra-util-host/caliptra-vdm-transport/src/: lib.rs
caliptra-util-host/cbinding/: Cargo.toml  build.rs  cbindgen.toml
caliptra-util-host/cbinding/include/: caliptra_util_host.h
caliptra-util-host/cbinding/src/: command.rs  custom_transport.rs  error.rs  lib.rs  mailbox_transport.rs  session.rs  transport.rs  types.rs
caliptra-util-host/cbinding/tests/: Makefile  README.md  caliptra_test_utils.c  caliptra_test_utils.h  cbindgen_test.toml  test_custom_c_transport.c  test_get_device_id.c
caliptra-util-host/command-types/: Cargo.toml
caliptra-util-host/command-types/src/: certificate.rs  crypto_aes.rs  crypto_asymmetric.rs  crypto_delete.rs  crypto_hash.rs  crypto_hmac.rs  crypto_import.rs  debug.rs  device_info.rs  dot.rs  error.rs  fuse.rs  lib.rs
caliptra-util-host/commands/: Cargo.toml
caliptra-util-host/commands/src/: lib.rs  packing.rs
caliptra-util-host/examples/basic-usage/: Cargo.toml
caliptra-util-host/examples/c-usage/: Makefile  main.c
caliptra-util-host/examples/demo/: Cargo.toml
caliptra-util-host/osal/: Cargo.toml
caliptra-util-host/osal/src/: error.rs  io.rs  lib.rs  memory.rs  sync.rs  thread.rs  time.rs
caliptra-util-host/session/: Cargo.toml
caliptra-util-host/session/src/: lib.rs
caliptra-util-host/src/: lib.rs
caliptra-util-host/tests/: Cargo.toml  integration_tests.rs
caliptra-util-host/tests/src/: integration_tests.rs  lib.rs  test_aes.rs  test_crypto_asymmetric.rs  test_get_device_id.rs  test_hmac.rs  test_sha.rs
caliptra-util-host/transport/: Cargo.toml
caliptra-util-host/transport/src/: error.rs  lib.rs
common/caliptra-core-firmware/: Cargo.toml
common/caliptra-core-firmware/src/: lib.rs
common/caliptra-core-tools/: Cargo.toml
common/caliptra-core-tools/src/: lib.rs
emulator/bmc/pldm/: Cargo.toml
emulator/bmc/pldm_fw_pkg/: Cargo.toml
emulator/cbinding/: .gitignore  Cargo.toml  README.md  emulator.c
emulator/cbinding/src/: lib.rs  simple_test.rs
hw/model/: Cargo.toml
hw/model/c-binding/: Cargo.toml  build.rs
hw/model/src/: bus_logger.rs  debug_unlock.rs  flash_ctrl.rs  jtag.rs  lcc.rs  lib.rs  mcu_mbox_transport.rs  mcu_mgr.rs  mm_flash_ctrl.rs  model_emulated.rs  model_fpga_realtime.rs  otp_provision.rs
hw/model/test-fw/: Cargo.toml  axi_bypass.rs  hitless_update_flow.rs  mailbox_responder.rs  otp_blank_check.rs
network/app/test/: Cargo.toml
network/rom/: Cargo.toml  build.rs
network/rom/src/: main.rs  start.s
network/xtask/: Cargo.toml
network/xtask/src/: lib.rs  main.rs
peakrdl-tock/: README.md  pyproject.toml
peakrdl-tock/src/peakrdl_tock/: __init__.py  __peakrdl__.py  exporter.py  generator.py  scanner.py  utils.py
peakrdl-tock/src/peakrdl_tock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
peakrdl-tock/tests/: test_basic.py
registers/generated-emulator/: Cargo.toml
registers/generated-emulator/src/: axicdma.rs  dma.rs  doe_mbox.rs  el2_pic.rs  ethernet.rs  fifo_regs.rs  flash.rs  (+19 more)
runtime/bare-metal/: Cargo.toml
tests/integration/: Cargo.toml
xtask/: Cargo.toml  build.rs
xtask/src/: apps_build.rs  auth_manifest.rs  ci.rs  corim.rs  coverage.rs  decode.py  demo.rs  deps.rs  docs.rs  emulator_cbinding.rs  flash_image.rs  fpga.rs  fuses.rs  header.rs  main.rs  precheckin.rs  rdl_gen.rs  rdl_gen_firmware.rs  registers.rs  rom.rs  runtime.rs  runtime_build.rs  signature_analysis.py  signature_validation.py  size_history.rs  stack_size.rs  tbf.rs  test.rs
(+1330 files in other folders)
