# Licensed under the Apache-2.0 license

[package]
name = "mcu-sw-root"
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[dependencies]
caliptra-core-firmware = { path = "common/caliptra-core-firmware", optional = true }
caliptra-core-tools = { path = "common/caliptra-core-tools", optional = true }

[features]
default = ["2_0"]
"2_0" = ["caliptra-core-tools/2_0"]
"2_1" = ["caliptra-core-tools/2_1"]

[workspace]
members = [
    "builder",
    "common/config",
    "common/flash-image",
    "common/mcu-mbox",
    "common/otp-digest",
    "common/otp-lifecycle",
    "common/mctp-vdm",
    "common/pldm",
    "common/poll",
    "common/testing",
    "common/caliptra-core-firmware",
    "common/caliptra-core-tools",
    "emulator/app",
    "emulator/app/mcu-mbox",
    "emulator/bmc/pldm-fw-pkg",
    "emulator/bmc/pldm-ua",
    "emulator/caliptra",
    "emulator/cbinding",
    "emulator/compliance-test",
    "emulator/consts",
    "emulator/periph",
    "error",
    "firmware-bundler",
    "hw/model",
    "hw/model/test-fw/exception-handler",
    "hw/model/test-fw/hitless-update-flow",
    "hw/model/test-fw/mailbox-responder",
    "hw/model/test-fw/otp-blank-check",
    "hw/model/test-fw/lc-ctrl",
    "hw/model/test-fw/sw-digest-lock",
    "platforms/common",
    "platforms/emulator/config",
    "platforms/emulator/mcu-image-header",
    "platforms/emulator/rom",
    "platforms/emulator/runtime",
    "platforms/emulator/runtime/kernel/capsules",
    "platforms/emulator/runtime/kernel/drivers/dma",
    "platforms/emulator/runtime/kernel/drivers/doe_mbox",
    "platforms/emulator/runtime/kernel/drivers/mcu_mbox",
    "platforms/emulator/runtime/userspace/api/caliptra-api",
    "platforms/emulator/runtime/userspace/apps/example",
    "platforms/emulator/runtime/userspace/apps/user",
    "platforms/fpga/config",
    "platforms/fpga/rom",
    "platforms/fpga/runtime",
    "platforms/fpga/runtime/drivers/flash_ctrl",
    "platforms/test_harness",
    "provisioning/fuses/fusegen",
    "provisioning/fuses/lib",
    "registers/fuses",
    "registers/generated-emulator",
    "registers/generated-firmware",
    "registers/generator",
    "registers/systemrdl-new",
    "registers/systemrdl",
    "rom",
    "romtime",
    "runtime/bare-metal",
    "runtime/kernel/capsules",
    "runtime/kernel/components",
    "runtime/kernel/drivers/doe",
    "runtime/kernel/drivers/flash",
    "runtime/kernel/drivers/i3c",
    "runtime/kernel/drivers/mcu_mbox",
    "runtime/kernel/veer",
    "runtime/userspace/api/caliptra-api",
    "runtime/userspace/api/external-cmds-common",
    "runtime/userspace/api/mcu-mbox-lib",
    "runtime/userspace/api/mctp-vdm-lib",
    "runtime/userspace/api/pldm-lib",
    "runtime/userspace/api/spdm-lib",
    "runtime/userspace/libtock/apis/interface/console",
    "runtime/userspace/libtock/apis/kernel/low_level_debug",
    "runtime/userspace/libtock/apis/peripherals/alarm",
    "runtime/userspace/libtock/apis/peripherals/rng",
    "runtime/userspace/libtock/tbf-header",
    "runtime/userspace/libtock/panic_handlers/debug_panic",
    "runtime/userspace/libtock/panic_handlers/small_panic",
    "runtime/userspace/libtock/platform",
    # "runtime/userspace/libtock/runner",
    "runtime/userspace/libtock/runtime",
    "runtime/userspace/libtock/syscalls_tests",
    # "runtime/userspace/libtock/tools/print_sizes",
    "runtime/userspace/libtock/ufmt",
    "runtime/userspace/libtock/unittest",
    "runtime/userspace/libtockasync",
    "runtime/userspace/syscall",
    "tests/hello",
    "tests/integration",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
arrayvec = { version = "0.7.4", default-features = false }
async-trait = "0.1.87"
base64 = "0.22"
bitfield = "0.14.0"
bitflags = { version = "2.4.0", default-features = false }
bit-vec = "0.6.3"
cargo_metadata = "0.20.0"
cbindgen = "0.24"
cc = "1.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
clap-num = "1.2.0"
constant_time_eq = { version = "0.4.2", default-features = false }
crc = "3.2.1"
crc32fast = "1.4.2"
critical-section = "1.1.2"
crossterm = "0.28.1"
ctrlc = "3.4.5"
elf = "0.7.4"
ecdsa = { version = "0.16.9", features = ["pem"]}
embassy-executor = "0.9.1"
embassy-sync = "0.6.2"
embedded-alloc = "0.5.1"
embedded-hal = "1.0"
fips204 = "0.4.6"
futures = "0.3.31"
gdbstub = "0.6.3"
gdbstub_arch = "0.2.4"
getrandom = "0.2"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
int-enum = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.26"
nix = "0.26.2"
num_enum = "0.7.2"
num-derive = "0.4.2"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
pkcs8 = "0.10.2"
portable-atomic = "1.7.0"
p384 = "0.13.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = "0.8.5"
rayon = "1.10"
random-port = "0.1.1"
same-file = "1"
semver = "1.0.23"
sec1 = { version = "0.7.3" }
serde = { version = "1.0.209", default-features = false, features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.127", features = ["alloc"] }
serde-hjson = "1.1.0"
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
simple_logger = "5.0.0"
smlang = "0.8.0"
static_cell = "2.1.0"
subst = "0.3.8"
sudo = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
tempfile = "3.14.0"
thiserror = "2"
toml = "0.8.19"
uio = "0.4.0"
uuid = { version = "1.10.0", features = ["serde", "v4"]}
walkdir = "2.5.0"
winnow = "0.7.4"
zerocopy = { version = "0.8.17", features = ["derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
zip = { version = "4.3.0", default-features = false, features = ["chrono", "deflate"] }

# local dependencies
caliptra-util-host-mailbox-test-config = { path = "caliptra-util-host/apps/mailbox/config" }
caliptra-mailbox-server = { path = "caliptra-util-host/apps/mailbox/server" }
capsules-emulator = { path = "platforms/emulator/runtime/kernel/capsules" }
capsules-runtime = { path = "runtime/kernel/capsules" }
dma-driver = { path = "platforms/emulator/runtime/kernel/drivers/dma" }
doe-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/doe_mbox" }
doe-transport = { path = "runtime/kernel/drivers/doe"}
emulator = { path = "emulator/app" }
emulator-bmc = { path = "emulator/bmc" }
emulator-caliptra = { "path" = "emulator/caliptra" }
emulator-consts = { "path" = "emulator/consts" }
emulator-mcu-mbox = { path = "emulator/app/mcu-mbox"}
emulator-periph = { path = "emulator/periph" }
emulator-registers-generated = { path = "registers/generated-emulator" }
flash-ctrl-emulator = { path = "platforms/emulator/runtime/kernel/drivers/flash_ctrl"}
flash-ctrl-fpga = { path = "platforms/fpga/runtime/drivers/flash_ctrl"}
flash-driver = { path = "runtime/kernel/drivers/flash" }
flash-image = { path = "common/flash-image" }
fusegen = { path = "provisioning/fuses/fusegen" }
i3c-driver = { path = "runtime/kernel/drivers/i3c" }
libtockasync = { path = "runtime/userspace/libtockasync" }
mcu-builder = { path = "builder" }
mcu-components = { path = "runtime/kernel/components" }
mcu-config = { path = "common/config" }
mcu-config-emulator = { path = "platforms/emulator/config" }
mcu-config-fpga = { path = "platforms/fpga/config" }
mcu-error = { path = "error" }
mcu-firmware-bundler = { path = "firmware-bundler" }
mcu-fuses-generator = { path = "registers/fuses" }
mcu-hw-model = { path = "hw/model" }
mcu-test-fw-exception-handler = { path = "hw/model/test-fw/exception-handler" }
mcu-test-fw-hitless-update-flow = { path = "hw/model/test-fw/hitless-update-flow" }
mcu-test-fw-mailbox-responder = { path = "hw/model/test-fw/mailbox-responder" }
mcu-test-fw-otp-blank-check = { path = "hw/model/test-fw/otp-blank-check" }
mcu-test-fw-lc-ctrl = { path = "hw/model/test-fw/lc-ctrl" }
mcu-test-fw-sw-digest-lock = { path = "hw/model/test-fw/sw-digest-lock" }
mcu-image-header = { path = "platforms/emulator/mcu-image-header" }
mcu-mbox-comm = { path = "runtime/kernel/drivers/mcu_mbox" }
mcu-mbox-common = { path = "common/mcu-mbox" }
mcu-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/mcu_mbox" }
mcu-otp-lifecycle = { path = "common/otp-lifecycle" }
mcu-platforms-common = { path = "platforms/common" }
mcu-rom-common = { path = "rom" }
mcu-test-harness = {path = "platforms/test_harness"}
mcu-testing-common = { path = "common/testing" }
mcu-tock-veer = { path = "runtime/kernel/veer" }
mctp-vdm-common = { path = "common/mctp-vdm" }
otp-digest = { path = "common/otp-digest" }
pldm-common = { path = "common/pldm"}
pldm-fw-pkg = { path = "emulator/bmc/pldm-fw-pkg" }
pldm-ua = { path = "emulator/bmc/pldm-ua"}
poll-common = { path = "common/poll"}
provisioning-fuses = { path = "provisioning/fuses/lib" }
registers-generated = { path = "registers/generated-firmware" }
registers-generator = { path = "registers/generator" }
registers-systemrdl = { path = "registers/systemrdl" }
registers-systemrdl-new = { path = "registers/systemrdl-new" }
romtime = { path = "romtime" }

# App related dependencies
external-cmds-common = { path = "runtime/userspace/api/external-cmds-common" }
mcu-mbox-lib = { path = "runtime/userspace/api/mcu-mbox-lib" }
mctp-vdm-lib = { path = "runtime/userspace/api/mctp-vdm-lib" }
pldm-lib = { path = "runtime/userspace/api/pldm-lib" }
spdm-lib = { path = "runtime/userspace/api/spdm-lib", default-features = false }
libsyscall-caliptra = { path = "runtime/userspace/syscall" }
libapi-caliptra = { path = "runtime/userspace/api/caliptra-api" }
libapi-emulated-caliptra = { path = "platforms/emulator/runtime/userspace/api/caliptra-api" }

# libtock dependencies
libtock = { path = "runtime/userspace/libtock" }
libtock_alarm = { path = "runtime/userspace/libtock/apis/peripherals/alarm" }
libtock_console = { path = "runtime/userspace/libtock/apis/interface/console" }
libtock_debug_panic = { path = "runtime/userspace/libtock/panic_handlers/debug_panic" }
libtock_low_level_debug = { path = "runtime/userspace/libtock/apis/kernel/low_level_debug" }
libtock_platform = { path = "runtime/userspace/libtock/platform" }
libtock_rng = { path = "runtime/userspace/libtock/apis/peripherals/rng" }
libtock_runtime = { path = "runtime/userspace/libtock/runtime" }
libtock_small_panic = { path = "runtime/userspace/libtock/panic_handlers/small_panic" }
libtock_unittest = { path = "runtime/userspace/libtock/unittest" }
tbf-header = { path = "runtime/userspace/libtock/tbf-header" }

# caliptra-core centralized dependencies
caliptra-core-firmware = { path = "common/caliptra-core-firmware" }
caliptra-core-tools = { path = "common/caliptra-core-tools" }

# caliptra-sw 2.0 components
caliptra-api-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-api", default-features = false }
caliptra-api-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-api-types", default-features = false }
caliptra-auth-man-gen-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-auth-man-gen", default-features = false }
caliptra-auth-man-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-auth-man-types", default-features = false }
caliptra-builder-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-builder" }
caliptra-drivers-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-drivers", default-features = false }
caliptra-emu-bus-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-emu-bus" }
caliptra-emu-cpu-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-emu-cpu" }
caliptra-emu-derive-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-emu-derive" }
caliptra-emu-periph-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-emu-periph" }
caliptra-emu-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-emu-types" }
caliptra-error-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-error", default-features = false }
caliptra-hw-model-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-hw-model" }
caliptra-hw-model-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-hw-model-types" }
caliptra-image-crypto-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-image-crypto", default-features = false, features = ["rustcrypto"] }
caliptra-image-fake-keys-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-image-fake-keys" }
caliptra-image-gen-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-image-gen" }
caliptra-image-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-image-types", default-features = false }
caliptra-registers-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-registers", default-features = false }
caliptra-test-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-test" }
caliptra-test-harness-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-test-harness" }
caliptra-test-harness-types-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "caliptra-test-harness-types", default-features = false }
ocp-eat-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "ocp-eat", default-features = false }
ureg-2_0 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", package = "ureg", default-features = false }

# caliptra-sw 2.1 components
caliptra-api-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-api", default-features = false }
caliptra-api-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-api-types", default-features = false }
caliptra-auth-man-gen-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-auth-man-gen", default-features = false }
caliptra-auth-man-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-auth-man-types", default-features = false }
caliptra-builder-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-builder" }
caliptra-drivers-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-drivers", default-features = false }
caliptra-emu-bus-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-emu-bus" }
caliptra-emu-cpu-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-emu-cpu" }
caliptra-emu-derive-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-emu-derive" }
caliptra-emu-periph-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-emu-periph" }
caliptra-emu-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-emu-types" }
caliptra-error-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-error", default-features = false }
caliptra-hw-model-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-hw-model" }
caliptra-hw-model-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-hw-model-types" }
caliptra-image-crypto-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-image-crypto", default-features = false, features = ["rustcrypto"] }
caliptra-image-fake-keys-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-image-fake-keys" }
caliptra-image-gen-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-image-gen" }
caliptra-image-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-image-types", default-features = false }
caliptra-registers-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-registers", default-features = false }
caliptra-test-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-test" }
caliptra-test-harness-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-test-harness" }
caliptra-test-harness-types-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "caliptra-test-harness-types", default-features = false }
ocp-eat-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "ocp-eat", default-features = false }
ureg-2_1 = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "49927b620f317ad4c459811f49baa56de197126c", package = "ureg", default-features = false }

# caliptra dependencies
caliptra-bitstream-downloader = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644" }
dpe = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "8bfab8d1fa6dda44c86300c6d9d2de6919482644", default-features = false, features = ["dpe_profile_p384_sha384"] }

# tock dependencies; keep git revs in sync
capsules-core = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-extra = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-system = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
components = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
kernel = { git = "https://github.com/tock/tock.git", rev = "release-2.2" , features = ["debug_load_processes"] }
riscv = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
riscv-csr = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
rv32i = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
tock-registers = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }

# local Tock dependencies; if you use these, you also need to use local caliptra-sw and change its tock-registers to point at the same tock location
# capsules-core = { path = "../tock/capsules/core" }
# capsules-extra = { path = "../tock/capsules/extra" }
# capsules-system = { path = "../tock/capsules/system" }
# components = { path = "../tock/boards/components" }
# kernel = { path = "../tock/kernel" }
# riscv = { path = "../tock/arch/riscv" }
# riscv-csr = { path = "../tock/libraries/riscv-csr" }
# rv32i = { path = "../tock/arch/rv32i" }
# tock-registers = { path = "../tock/libraries/tock-register-interface" }



# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test]
opt-level = 3
lto = "thin"

[profile.release]
debug = true      # Keep debug symbols in the release ELF so that we can debug more easily.
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
openssl = { git = "https://github.com/clundin25/rust-openssl.git", rev = "4ada1c1d7c264e052e7bb71ecddbd196a5c2a0c7" } # MLDSA
