# Licensed under the Apache-2.0 license

[package]
name = "mcu-builder"
edition = "2021"

[dependencies]
anyhow.workspace = true
caliptra-core-tools = { workspace = true, features = ["2_0"] }
cargo_metadata.workspace = true
cfg-if.workspace = true
chrono.workspace = true
elf.workspace = true
flash-image.workspace = true
hex.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
mcu-config-fpga.workspace = true
mcu-firmware-bundler.workspace = true
pldm-fw-pkg.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
semver.workspace = true
subst.workspace = true
tbf-header.workspace = true
tempfile.workspace = true
uuid.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
zip.workspace = true

[features]
parallel-build = ["dep:rayon"]
