# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
fpga_realtime = ["mcu-hw-model/fpga_realtime"]

[dependencies]
caliptra-api-types.workspace = true
anyhow.workspace = true
cc.workspace = true
caliptra-image-gen.workspace = true
caliptra-emu-periph.workspace = true
caliptra-image-types.workspace = true
caliptra-hw-model.workspace = true
clap.workspace = true
clap-num.workspace = true
chrono.workspace = true
crossterm.workspace = true
crc32fast.workspace = true
elf.workspace = true
log.workspace = true
mcu-builder.workspace = true
mcu-config-emulator.workspace = true
mcu-config-fpga.workspace = true
mcu-rom-common.workspace = true
mcu-testing-common.workspace = true
mcu-hw-model.workspace = true
ml-kem.workspace = true
nix.workspace = true
pldm-common.workspace = true
pldm-fw-pkg.workspace = true
pldm-ua.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
simple_logger.workspace = true
simplelog.workspace = true
registers-generator.workspace = true
registers-systemrdl.workspace = true
semver.workspace = true
serde.workspace = true
serde-hjson.workspace = true
sudo.workspace = true
tempfile.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
ratatui = { version = "0.29.0", features = [
    "palette",
    "macros",
    "scrolling-regions",
    "all-widgets",
] }

[build-dependencies]
cc.workspace = true
