[package]
name = "caliptra-commands" 
version = "0.1.0"
edition = "2021"
description = "Command layer for Caliptra Utility Host Library"
license = "Apache-2.0"
authors = ["Caliptra Team"]

[dependencies]
caliptra-osal = { path = "../caliptra-osal" }
caliptra-command-types = { path = "../caliptra-command-types", default-features = false }
zerocopy = { version = "0.7", features = ["derive"] }