[package]
name = "caliptra-util-host-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for Caliptra Utility Host Library"
license = "Apache-2.0"
authors = ["Caliptra Team"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["rt", "time"], optional = true }

[features]
default = ["std"]
std = []
async = ["tokio"]