# Licensed under the Apache-2.0 license

[package]
name = "caliptra-util-host-osal"
version.workspace = true
edition.workspace = true
description = "OS Abstraction Layer for Caliptra Utility Host Library"

[dependencies]
# Core dependencies that work in no_std
nb = "1.0"

[features]
default = ["std"]
std = ["libc", "windows-sys"]
alloc = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", optional = true, features = ["Win32_Foundation", "Win32_System_Threading"] }